# cafe_upscaling_models

./: .gitignore  README.md  pyproject.toml
data/predictions/: final_model_test_set_eval.parquet  script_january_pred.csv  script_january_pred.parquet  script_test_pred.parquet  what.txt
data/processed_data/: what.txt
data/raw_data/: raw.csv  what.txt
data_ingestion_preprocessing/: data_ingestion_preprocessing.ipynb  data_ingestion_preprocessing.py  data_looking_at_features.ipynb
docs/: data_ingestion_preprocessing.md  data_ingestion_preprocessing.mkd  modelling_documentation.md  visualisations_documentation.md
models_forecast_eval/: metrics.md  model_final.ipynb  models_DL.ipynb  models_ML.ipynb  models_statistical.ipynb
script/: config.toml  make_prediction.py  metrics.md
script/modules/: dataprocessing.py  modelling.py  visialising.py
visualisations/: visualisations.ipynb  visualisations_documentation.md
