[project]
name = "cafe-upscaling-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "holidays>=0.86",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "mlforecast>=1.0.2",
    "neuralforecast>=3.1.2",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsforecast>=2.0.3",
    "tabulate>=0.9.0",
    "utilsforecast>=0.2.14",
]
